  _____ _    _ __  __  _____          
 / ____| |  | |  \/  |/ ____|   /\    
| |  __| |  | | \  / | |  __   /  \   
| | |_ | |  | | |\/| | | |_ | / /\ \  
| |__| | |__| | |  | | |__| |/ ____ \ 
 \_____|\____/|_|  |_|\_____/_/    \_\

=======================================
Framework Backend
3.3.2
    - Suporte a NOT_IN no ComparisonOperator do Criteria GQuery

3.3.1
    - Correção no GQuery para adicionar o filtro gumgaActive = true nas entidades que utilizam o model GumgaLDModel.

3.3.0
    - Correção no where do GQuery para não concatenar mais as string nas condições.
    - Foi criado um novo endpoint v2/gquery para que você consiga buscar apenas os campos necessários no select do GQuery.

3.2.9
    - Correções de concorrência GumgaRequestFilterV2

3.2.8
    - NPE GumgaRequestFilterV2

3.2.7
    - Implementados os metodos deletePermanentGumgaLDModel,deletePermanentGumgaLDModel na classe GumgaGateway

3.2.6
    - NPE GumgaRequestFilterV2

3.2.5
    - Obter os dados do cache da classe GumgaCacheRequestFilterV2Repository

3.2.4
    - Correção na concorrência GumgaCacheRequestFilterV2 HashMap -> ConcurrentHashMap

3.2.3
    - Adicionada a classe de modelagem GumgaSharedLDModel
    - Foram criados testes de compartilhamento para todas as classes de modelagem "Shared"

3.2.2
    - Corrigido a busca de entidades que utilizam remoção lógica (GumgaLDModel)

3.2.1
    - Na GumgaSecurityProxy foi adiciona uma nova rota "/lostsoftwarepassword/{login:.+}" para que você não precise informa o software na URL.

3.2.0
    - As depedências do querydsl foram alteradas para 3.4.0

3.1.0
   - As depedências do querydsl foram alteradas para 3.6.0

3.0.8
    - Endpoint proxy para validar se o email já existe no security

3.0.7
    - findAll e DeleteAll com tenancy.
    - QueryDsl do GumgaReport e IGumgaReport
    - Novo endpoint para buscar organizações por token com paginação -> /public/token/v2/organizations/{TOKEN}/?page=&pageSize=

3.0.6