@@ -3,6 +3,7 @@ package io.gumga.security;
 import io.gumga.core.GumgaThreadScope;
 import io.gumga.core.GumgaValues;
 import io.gumga.domain.saas.GumgaSaaS;
+import io.gumga.presentation.CustomGumgaRestTemplate;
 import io.gumga.presentation.api.GumgaJsonRestTemplate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpEntity;
@@ -27,6 +28,8 @@ public class GumgaSoftwareSaaS {
 
     @Autowired
     private GumgaValues gumgaValues;
+    @Autowired(required = false)
+    private CustomGumgaRestTemplate gumgaRestTemplate;
 
     private String getBaseUrl() {
         return gumgaValues.getGumgaSecurityUrl().replace("/publicoperations", "/api/security-saas");
@@ -37,6 +40,7 @@ public class GumgaSoftwareSaaS {
     private RestTemplate getRestTemplate() {
         if (restTemplate == null) {
             restTemplate = new GumgaJsonRestTemplate();
+            restTemplate = gumgaRestTemplate != null ? gumgaRestTemplate.getRestTemplate(restTemplate) : restTemplate;
         }
         return restTemplate;
     }
